[package]
name = "mirage"
version = "0.1.0-alpha"
authors = ["sirlolcat"]
edition = "2021"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
cbc = "0.1.2"
rsa = "0.9.3"
block-modes = "0.9"
rand = "0.8.5"
hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pem = "3.0.2"
pkcs8 = "0.10.2"
sha2 = "0.10.8"
log = "0.4.20"
env_logger = "0.10.1"
colored = "2.0.4"
openssl = "0.10"
rayon = "1.8.0"
rand_distr = "0.4.3"
sys-info = "0.9.1"
lazy_static = "1.4"
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

[[bin]]
name = "mirage"
path = "src/main.rs"

[features]
development = []
